--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -36,6 +36,8 @@ keys:
                     description: Sequence ID.
                     convert_types:
                       - str
+                    min: 1
+                    max: 1023
                   application:
                     type: str
                     required: true
@@ -79,7 +81,6 @@ keys:
                     description: Segment name.
                   definition:
                     type: dict
-                    required: true
                     keys:
                       interfaces:
                         type: list
@@ -111,7 +112,6 @@ keys:
                               description: The name of the match-list. You can have a maximum of one per address-family. Mutually exclusive to the use of covered_prefix_list. If both are configured prefix takes precedence.
                   policies:
                     type: list
-                    required: true
                     description: The policies controlling traffic into the segment.
                     primary_key: source
                     items:
