--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard-policy.cfg
@@ -2,7 +2,7 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname monitor-telemetry-postcard
+hostname monitor-telemetry-postcard-policy
 !
 no enable password
 no aaa root
@@ -14,9 +14,10 @@ interface Management1
 !
 monitor telemetry postcard policy
    no disabled
-   ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
    ingress sample rate 16384
-   ingress sample tcp-udp-checksum 65000
+   marker vxlan header word 0 bit 0
+   ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
+   !
    sample policy samplepo1
       match rule1 ipv4
          destination prefix 10.3.3.0/24
@@ -24,24 +25,35 @@ monitor telemetry postcard policy
          protocol tcp destination port www
          protocol tcp destination port 78-80
          protocol tcp destination port 77
+         protocol udp destination port 99
+         protocol udp source port 98
+      !
       match rule2 ipv6
          destination prefix 4::0/128
          source prefix 5::0/128
          protocol udp destination port ssh
          protocol udp destination port 748-800
          protocol udp destination port 747
+      !
+      match rule3 ipv4
+      !
+   !
    sample policy samplepo2
       match rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
          protocol udp destination port www
          protocol udp destination port 88
-         protocol udp source port www
-         protocol udp source port 78-80
          protocol udp source port 77
+         protocol udp source port 78-80
+         protocol udp source port www
+      !
+   !
    profile profile1
-      ingress sample policy ingresspo1
+      ingress sample policy samplepo1
+   !
    profile profile2
-      ingress sample policy ingresspo1
+      ingress sample policy samplepo2
+   !
 !
 end
