Change source to from for segments Update schema and tests Add option for a fallback policy

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
@@ -50,6 +50,7 @@ router segment-security
          policies
             from MATCH-LIST20 policy policy-forward-all
             from MATCH-LIST30 policy policy-drop-all
+            fallback policy policy-custom
    !
 !
 end
