--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard-policy.yml
@@ -7,7 +7,9 @@ monitor_telemetry_postcard_policy:
       version: 2
     sample:
       rate: 16384
-      tcp_udp_checksum: 65000
+      tcp_udp:
+        checksum: 65000
+        mask: "0xffff"
   vxlan_marking_bit: 0
   profiles:
     - name: profile1
