--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6993,24 +6993,29 @@ keys:
             keys:
               rate:
                 type: int
-                description: Sampling rate.
+                description: Sampling rate. Rate is preferred when both rate and tcp_udp
+                  is defined.
                 convert_types:
                 - str
                 valid_values:
                 - 16384
                 - 32768
                 - 65536
-              tcp_udp_checksum:
-                type: int
-                description: TCP/UDP checksum or IP ID value.
-                min: 0
-                max: 65535
-                convert_types:
-                - str
-              mask:
-                type: str
-                description: 16 bit hexadecimal mask for TCP/UDP or IP ID with atmost
-                  2 unser bits.
+              tcp_udp:
+                type: dict
+                description: TCP/UDP parameters.
+                keys:
+                  checksum:
+                    type: int
+                    description: TCP/UDP checksum or IP ID value.
+                    min: 0
+                    max: 65535
+                    convert_types:
+                    - str
+                  mask:
+                    type: str
+                    description: 16 bit hexadecimal mask for TCP/UDP or IP ID with
+                      atmost 2 unser bits.
       vxlan_marking_bit:
         type: int
         default: 0
@@ -7049,6 +7054,7 @@ keys:
                   type:
                     type: str
                     description: IP address version.
+                    required: true
                     valid_values:
                     - ipv4
                     - ipv6
