Feat(eos_designs): IPv4/IPv6 address-family configuration for bgp_peer_groups defined under network services. (#3887)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2B.cfg
@@ -259,7 +259,11 @@ router bgp 65107
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       no neighbor IPVPN-INTERWORKING-PEERS activate
+      neighbor Tenant_C_WAN_Zone_BGP_PEER_GROUP activate
       neighbor UNDERLAY-PEERS activate
+   !
+   address-family ipv6
+      neighbor Tenant_C_WAN_Zone_BGP_PEER_GROUP activate
    !
    address-family vpn-ipv4
       domain identifier 65000:4
