--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -13,9 +13,10 @@ molecule>=6.0
 molecule-plugins[docker]>=23.4.0
 yamllint
 treelib>=1.5.5
-md-toc>=7.1.0
+md-toc>=8.1.0
 natsort
-jsonschema>=4.5.1,<4.18
+jsonschema>=4.10.3
+referencing>=0.35.0
 deepmerge>=1.1.0
 isort==5.13.2
 black==24.4.2
