--- a/ansible_collections/arista/avd/requirements.txt
+++ b/ansible_collections/arista/avd/requirements.txt
@@ -2,10 +2,11 @@ netaddr>=0.7.19
 Jinja2>=3.0.0
 treelib>=1.5.5
 cvprac>=1.3.1
-jsonschema>=4.5.1,<4.18
+jsonschema>=4.10.3
+referencing>=0.35.0
 requests>=2.27.0
 PyYAML>=6.0.0
-md-toc>=7.1.0
+md-toc>=8.1.0
 deepmerge>=1.1.0
 cryptography>=38.0.4
 # No anta requirement until the eos_validate_state integration is out of preview.
