--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2,6 +2,7 @@
 # Use of this source code is governed by the Apache License 2.0
 # that can be found in the LICENSE file.
 $id: eos_designs
+$schema: avd_meta_schema
 type: dict
 allow_other_keys: true
 keys:
@@ -220,7 +221,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       mlag_ipv4_underlay_peer:
         type: dict
         keys:
@@ -240,7 +241,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       evpn_overlay_peers:
         type: dict
         keys:
@@ -260,7 +261,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       evpn_overlay_core:
         type: dict
         keys:
@@ -280,7 +281,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       mpls_overlay_peers:
         type: dict
         keys:
@@ -300,7 +301,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       rr_overlay_peers:
         type: dict
         keys:
@@ -320,7 +321,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       ipvpn_gateway_peers:
         type: dict
         keys:
@@ -340,7 +341,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       wan_overlay_peers:
         type: dict
         keys:
@@ -394,7 +395,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       wan_rr_overlay_peers:
         type: dict
         description: Configuration options for the peer-group created to peer between
@@ -440,7 +441,7 @@ keys:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items
       IPv4_UNDERLAY_PEERS:
         type: dict
         deprecation:
@@ -2907,7 +2908,7 @@ keys:
           documentation_options:
             hide_keys: true
           description: Custom structured config for eos_cli_config_gen.
-          $ref: eos_cli_config_gen#/
+          $ref: eos_cli_config_gen#
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the root level of the final EOS
@@ -4444,7 +4445,7 @@ keys:
                       is used.
                   id:
                     type: int
-                    $ref: eos_cli_config_gen#keys/router_adaptive_virtual_topology/keys/vrfs/items/keys/profiles/items/keys/id
+                    $ref: eos_cli_config_gen#/keys/router_adaptive_virtual_topology/keys/vrfs/items/keys/profiles/items/keys/id
                     required: false
                     min: 2
                     max: 253
@@ -5199,7 +5200,7 @@ $defs:
               for eos_cli_config_gen.
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/port_channel_interfaces/items/
+            $ref: eos_cli_config_gen#/keys/port_channel_interfaces/items
       validate_state:
         type: bool
         description: Set to false to disable interface validation by the `eos_validate_state`
@@ -5214,7 +5215,7 @@ $defs:
           for eos_cli_config_gen.
         documentation_options:
           hide_keys: true
-        $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items/
+        $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items
   connected_endpoints:
     type: list
     primary_key: name
@@ -6315,7 +6316,7 @@ $defs:
                         for eos_cli_config_gen.
                       documentation_options:
                         hide_keys: true
-                      $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items/
+                      $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items
                     raw_eos_cli:
                       type: str
                       description: 'EOS CLI rendered directly on the Ethernet interface
@@ -6628,7 +6629,7 @@ $defs:
                       for eos_cli_config_gen.
                     documentation_options:
                       hide_keys: true
-                    $ref: eos_cli_config_gen#/keys/router_bgp/keys/vrfs/items/
+                    $ref: eos_cli_config_gen#/keys/router_bgp/keys/vrfs/items
               bgp_peer_groups:
                 documentation_options:
                   table: network-services-vrfs-bgp-settings
@@ -6735,7 +6736,7 @@ $defs:
                 description: Custom structured config for eos_cli_config_gen.
                 documentation_options:
                   hide_keys: true
-                $ref: eos_cli_config_gen#/
+                $ref: eos_cli_config_gen#
         l2vlans:
           documentation_options:
             table: network-services-l2vlans-settings
@@ -6907,7 +6908,7 @@ $defs:
                       '
                     documentation_options:
                       hide_keys: true
-                    $ref: eos_cli_config_gen#/keys/router_bgp/keys/vlans/items/
+                    $ref: eos_cli_config_gen#/keys/router_bgp/keys/vlans/items
                   raw_eos_cli:
                     type: str
                     description: 'EOS cli commands rendered on router_bgp.vlans.
@@ -7187,7 +7188,7 @@ $defs:
               hide_keys: true
             description: Custom structured config for eos_cli_config_gen.
             type: dict
-            $ref: eos_cli_config_gen#/
+            $ref: eos_cli_config_gen#
           uplink_type:
             documentation_options:
               table: node-type-uplink-configuration
@@ -7399,7 +7400,7 @@ $defs:
 
               '
           mlag_port_channel_structured_config:
-            $ref: eos_cli_config_gen#/keys/port_channel_interfaces/items/
+            $ref: eos_cli_config_gen#/keys/port_channel_interfaces/items
             documentation_options:
               table: node-type-l2-mlag-configuration
               hide_keys: true
@@ -7416,7 +7417,7 @@ $defs:
 
               '
           mlag_peer_vlan_structured_config:
-            $ref: eos_cli_config_gen#/keys/vlan_interfaces/items/
+            $ref: eos_cli_config_gen#/keys/vlan_interfaces/items
             documentation_options:
               table: node-type-l2-mlag-configuration
               hide_keys: true
@@ -7433,7 +7434,7 @@ $defs:
 
               '
           mlag_peer_l3_vlan_structured_config:
-            $ref: eos_cli_config_gen#/keys/vlan_interfaces/items/
+            $ref: eos_cli_config_gen#/keys/vlan_interfaces/items
             documentation_options:
               table: node-type-l2-mlag-configuration
               hide_keys: true
@@ -8865,7 +8866,7 @@ $defs:
           documentation_options:
             hide_keys: true
           description: Custom structured config for the Ethernet interface.
-          $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items/
+          $ref: eos_cli_config_gen#/keys/ethernet_interfaces/items
   p2p_links:
     type: list
     items:
@@ -9389,7 +9390,7 @@ $defs:
               '
             documentation_options:
               hide_keys: true
-            $ref: eos_cli_config_gen#/keys/router_bgp/keys/vlans/items/
+            $ref: eos_cli_config_gen#/keys/router_bgp/keys/vlans/items
           raw_eos_cli:
             type: str
             description: 'EOS CLI rendered directly on the Router BGP, VLAN definition
@@ -9410,7 +9411,7 @@ $defs:
           '
         documentation_options:
           hide_keys: true
-        $ref: eos_cli_config_gen#/keys/vlan_interfaces/items/
+        $ref: eos_cli_config_gen#/keys/vlan_interfaces/items
   virtual_topology:
     type: dict
     keys:
@@ -9419,29 +9420,29 @@ $defs:
         description: Optional name.
       traffic_class:
         type: int
-        $ref: eos_cli_config_gen#keys/router_adaptive_virtual_topology/keys/policies/items/keys/matches/items/keys/traffic_class
+        $ref: eos_cli_config_gen#/keys/router_adaptive_virtual_topology/keys/policies/items/keys/matches/items/keys/traffic_class
       dscp:
         type: int
-        $ref: eos_cli_config_gen#keys/router_adaptive_virtual_topology/keys/policies/items/keys/matches/items/keys/dscp
+        $ref: eos_cli_config_gen#/keys/router_adaptive_virtual_topology/keys/policies/items/keys/matches/items/keys/dscp
       lowest_hop_count:
         description: 'Prefer paths with lowest hop-count.
 
           Only applicable for `wan_mode: "cv-pathfinder"`.'
         type: bool
         default: false
-        $ref: eos_cli_config_gen#keys/router_path_selection/keys/load_balance_policies/items/keys/lowest_hop_count
+        $ref: eos_cli_config_gen#/keys/router_path_selection/keys/load_balance_policies/items/keys/lowest_hop_count
       constraints:
         type: dict
         keys:
           jitter:
             type: int
-            $ref: eos_cli_config_gen#keys/router_path_selection/keys/load_balance_policies/items/keys/jitter
+            $ref: eos_cli_config_gen#/keys/router_path_selection/keys/load_balance_policies/items/keys/jitter
           latency:
             type: int
-            $ref: eos_cli_config_gen#keys/router_path_selection/keys/load_balance_policies/items/keys/latency
+            $ref: eos_cli_config_gen#/keys/router_path_selection/keys/load_balance_policies/items/keys/latency
           loss_rate:
             type: str
-            $ref: eos_cli_config_gen#keys/router_path_selection/keys/load_balance_policies/items/keys/loss_rate
+            $ref: eos_cli_config_gen#/keys/router_path_selection/keys/load_balance_policies/items/keys/loss_rate
       path_groups:
         type: list
         min_length: 1
