--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -28,7 +28,8 @@ requires = [
     "setuptools>=66.1",
     "wheel",
     "jinja2>=3.0",
-    "jsonschema>=4.5.1,<4.18",
+    "jsonschema>=4.10.3",
+    "referencing>=0.35.0",
     "deepmerge>=1.1.0",
     "md-toc>=8.1.8",
     "pyyaml>=6.0.0",
