--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -646,6 +646,17 @@ keys:
           keys:
             source_protocol:
               type: str
+              valid_values:
+                - "attached-host"
+                - "bgp"
+                - "connected"
+                - "dynamic"
+                - "isis"
+                - "ospf"
+                - "ospfv3"
+                - "rip"
+                - "static"
+                - "user"
             route_map:
               type: str
             rcf:
@@ -653,7 +664,8 @@ keys:
               description: |-
                 RCF function name with parenthesis.
                 Example: MyFunction(myarg).
-                Only used if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
+                `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
+                Only applicable if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
             include_leaked:
               type: bool
       vlan_aware_bundles:
