--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1329,6 +1329,11 @@ $defs:
                 description: |
                   Number of parallel links towards HA switches.
                   Can be used to reserve interfaces for future parallel HA links.
+              flow_tracking:
+                type: dict
+                $ref: "eos_designs#/$defs/flow_tracking_link"
+                description: |-
+                  Configures flow-tracking on the interfaces. Overrides `fabric_flow_tracking.wan_ha_links` setting.
           dps_mss_ipv4:
             documentation_options:
               table: node-type-wan-configuration
