--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
@@ -154,8 +154,6 @@ ethernet_interfaces:
   type: routed
   description: ATT_404-01
   dhcp_client_accept_default_route: true
-  flow_tracker:
-    hardware: FLOW-TRACKER
 - name: Ethernet52
   type: routed
   peer_type: l3_interface
@@ -163,6 +161,7 @@ ethernet_interfaces:
   shutdown: false
   description: LAN HA OMG
   ip_address: 10.10.10.0/31
+  flow_tracker: null
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -281,20 +280,6 @@ agents:
   environment_variables:
   - name: KERNELFIB_PROGRAM_ALL_ECMP
     value: '1'
-flow_tracking:
-  hardware:
-    trackers:
-    - name: FLOW-TRACKER
-      record_export:
-        on_inactive_timeout: 70000
-        on_interval: 300000
-      exporters:
-      - name: CV-TELEMETRY
-        collector:
-          host: 127.0.0.1
-        local_interface: Loopback0
-        template_interval: 3600000
-    shutdown: false
 ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
@@ -571,6 +556,20 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
+flow_tracking:
+  hardware:
+    trackers:
+    - name: FLOW-TRACKER
+      record_export:
+        on_inactive_timeout: 70000
+        on_interval: 300000
+      exporters:
+      - name: CV-TELEMETRY
+        collector:
+          host: 127.0.0.1
+        local_interface: Loopback0
+        template_interval: 3600000
+    shutdown: false
 metadata:
   cv_tags:
     device_tags:
