Apply suggestions from code review

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
@@ -152,13 +152,13 @@ keys:
       level:
         type: list
         description: Configure logging severity.
-        primary_key: facility_name
+        primary_key: facility
         convert_types:
           - dict
         items:
           type: dict
           keys:
-            facility_name:
+            facility:
               type: str
             severity:
               type: str
